website/versioned_docs/version-0.19.0/api-unittype.md
---
id: version-0.19.0-api-unittype
title: UnitType
original_id: api-unittype
---



The name of a unit like '`kilogram`' or '`terabyte`'.

### Syntax

<pre class="syntax">
'acre' | 'acre-foot' | 'ampere' ... 'week' | 'yard' | 'year'
</pre>

### Values

  - 'acre'
  - 'acre-foot'
  - 'ampere'
  - 'arc-minute'
  - 'arc-second'
  - 'astronomical-unit'
  - 'atmosphere'
  - 'bar'
  - 'barrel'
  - 'bit'
  - 'british-thermal-unit'
  - 'bushel'
  - 'byte'
  - 'calorie'
  - 'carat'
  - 'celsius'
  - 'centiliter'
  - 'centimeter'
  - 'century'
  - 'cubic-centimeter'
  - 'cubic-foot'
  - 'cubic-inch'
  - 'cubic-kilometer'
  - 'cubic-meter'
  - 'cubic-mile'
  - 'cubic-yard'
  - 'cup'
  - 'cup-metric'
  - 'dalton'
  - 'day'
  - 'decade'
  - 'deciliter'
  - 'decimeter'
  - 'degree'
  - 'dot-per-centimeter'
  - 'dot-per-inch'
  - 'dunam'
  - 'earth-mass'
  - 'electronvolt'
  - 'em'
  - 'fahrenheit'
  - 'fathom'
  - 'fluid-ounce'
  - 'fluid-ounce-imperial'
  - 'foodcalorie'
  - 'foot'
  - 'furlong'
  - 'g-force'
  - 'gallon'
  - 'gallon-imperial'
  - 'generic'
  - 'gigabit'
  - 'gigabyte'
  - 'gigahertz'
  - 'gigawatt'
  - 'gram'
  - 'hectare'
  - 'hectoliter'
  - 'hectopascal'
  - 'hertz'
  - 'horsepower'
  - 'hour'
  - 'inch'
  - 'inch-hg'
  - 'joule'
  - 'karat'
  - 'kelvin'
  - 'kilobit'
  - 'kilobyte'
  - 'kilocalorie'
  - 'kilogram'
  - 'kilohertz'
  - 'kilojoule'
  - 'kilometer'
  - 'kilometer-per-hour'
  - 'kilopascal'
  - 'kilowatt'
  - 'kilowatt-hour'
  - 'knot'
  - 'light-year'
  - 'liter'
  - 'liter-per-100kilometers'
  - 'liter-per-kilometer'
  - 'lux'
  - 'megabit'
  - 'megabyte'
  - 'megahertz'
  - 'megaliter'
  - 'megapascal'
  - 'megapixel'
  - 'megawatt'
  - 'meter'
  - 'meter-per-second'
  - 'meter-per-second-squared'
  - 'metric-ton'
  - 'microgram'
  - 'micrometer'
  - 'microsecond'
  - 'mile'
  - 'mile-per-gallon'
  - 'mile-per-gallon-imperial'
  - 'mile-per-hour'
  - 'mile-scandinavian'
  - 'milliampere'
  - 'millibar'
  - 'milligram'
  - 'milligram-per-deciliter'
  - 'milliliter'
  - 'millimeter'
  - 'millimeter-of-mercury'
  - 'millimole-per-liter'
  - 'millisecond'
  - 'milliwatt'
  - 'minute'
  - 'mole'
  - 'month'
  - 'nanometer'
  - 'nanosecond'
  - 'nautical-mile'
  - 'newton'
  - 'newton-meter'
  - 'ohm'
  - 'ounce'
  - 'ounce-troy'
  - 'parsec'
  - 'part-per-million'
  - 'pascal'
  - 'percent'
  - 'permille'
  - 'permyriad'
  - 'petabyte'
  - 'picometer'
  - 'pint'
  - 'pint-metric'
  - 'pixel'
  - 'pixel-per-centimeter'
  - 'pixel-per-inch'
  - 'point'
  - 'pound'
  - 'pound-foot'
  - 'pound-force'
  - 'pound-per-square-inch'
  - 'quart'
  - 'radian'
  - 'revolution'
  - 'second'
  - 'solar-luminosity'
  - 'solar-mass'
  - 'solar-radius'
  - 'square-centimeter'
  - 'square-foot'
  - 'square-inch'
  - 'square-kilometer'
  - 'square-meter'
  - 'square-mile'
  - 'square-yard'
  - 'stone'
  - 'tablespoon'
  - 'teaspoon'
  - 'terabit'
  - 'terabyte'
  - 'therm-us'
  - 'times'
  - 'ton'
  - 'volt'
  - 'watt'
  - 'week'
  - 'yard'
  - 'year'

{%refs UnitType}
